--- a/style.css
+++ b/style.css
@@ -29,8 +29,10 @@ body,html{
 
 .question{
     width: 100%;
+    height: 20%;
     background-color: #473BF0;
-    font-size: 3vw;
+    font-size: 2.5vw;
+    font-weight: bolder;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,13 +52,14 @@ body,html{
 .option{
     color: #000500;
     width: 100%;
-    height: 10%;
+    height: 15%;
     background-color: white;
     margin-bottom: 2vw;
     display: flex;
     align-items: center;
     padding-left: 2vw;
-    font-size: 30px;
+    font-size: 2vw;
+    font-weight: bold;
     font-size: 600;
     transition: all 0.33s linear;
     &:hover{
@@ -76,4 +79,8 @@ body,html{
     right: 5vw;
     bottom: 5vw;
     border-style: none;
+    &:hover{
+        opacity: 0.8;
+        cursor: pointer;
+    }
 }
